--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -26,7 +26,7 @@ jobs:
         echo ::set-output name=VERSION::${GITHUB_REF/refs\/tags\//}
         echo ::set-output name=RELEASE_ID::$(jq --raw-output '.release.id' $GITHUB_EVENT_PATH)
     - name: Publish for Linux
-      run: dotnet publish -o ./slb-${{ matrix.rid }} -c Release -r ${{ matrix.rid }} /p:PublishSingleFile=true /p:PublishTrimmed=true /p:Version=${{ steps.get_version.outputs.VERSION }} --self-contained
+      run: dotnet publish -o ./slb-${{ matrix.rid }} -c Release -r ${{ matrix.rid }} /p:PublishSingleFile=true /p:Version=${{ steps.get_version.outputs.VERSION }} --self-contained
     - name: Zip it Up
       run: zip -r -j SimplestLoadBalancer-${{ steps.get_version.outputs.VERSION }}-${{ matrix.rid }}.zip ./slb-${{ matrix.rid }} 
     - name: Upload to Releaase
