--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -19,9 +19,9 @@ jobs:
       with:
         dotnet-version: 8.0.x
     - name: Publish for Linux
-      run: dotnet publish -o ./SimplestLoadBalancer-${{ github.run_id }}-linux-x64 -c Release -r linux-x64 /p:PublishSingleFile=true --self-contained
+      run: dotnet publish -o ./SimplestLoadBalancer-${{ github.run_id }}-linux-x64 -c Release -r linux-x64 /p:PublishSingleFile=true /p:PublishReadyToRun=true --self-contained
     - name: Archive Zip
-      uses: actions/upload-artifact@v1
+      uses: actions/upload-artifact@v4
       with:
         name: SimplestLoadBalancer-${{ github.run_id }}-linux-x64.zip
         path: SimplestLoadBalancer-${{ github.run_id }}-linux-x64
