--- a/.github/workflows/release-msi.yml
+++ b/.github/workflows/release-msi.yml
@@ -1,18 +1,19 @@
 name: Release
 
 on: 
-    release: 
-      types:
-        - created
+  release: 
+    types:
+      - created
+      - edited
 
 jobs:
   publish:
 
-    runs-on: ubuntu-latest
+    runs-on: windows-latest
     
     strategy:
         matrix:
-            rid: [win-x64, linux-x64, linux-arm]
+            rid: [win-x64]
 
     steps:
     - uses: actions/checkout@v2
@@ -27,18 +28,21 @@ jobs:
         echo ::set-output name=RELEASE_ID::$(jq --raw-output '.release.id' $GITHUB_EVENT_PATH)
     - name: Publish for OS
       run: dotnet publish -o ./slb-${{ matrix.rid }} -c Release -r ${{ matrix.rid }} /p:PublishSingleFile=true /p:PublishReadyToRun=true /p:Version=${{ steps.get_version.outputs.VERSION }} --self-contained
-    - name: Zip it Up
-      run: zip -r -j SimplestLoadBalancer-${{ steps.get_version.outputs.VERSION }}-${{ matrix.rid }}.zip ./slb-${{ matrix.rid }} 
-    - name: Upload ZIP to Releaase
+    - name: Add msbuild to PATH
+      uses: microsoft/setup-msbuild@v2
+    - name: Install WiX
+      run: dotnet tool install --global wix
+    - name: Build WiX on Windows
+      run: wix build package.wxs -define PublishDir=./slb-${{ matrix.rid }} -o SimplestLoadBalancer-${{ steps.get_version.outputs.VERSION }}-${{ matrix.rid }}.msi -ext WixToolset.UI.wixext -ext WixToolset.Firewall.wixext
+    - name: Upload MSI to Releaase
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         VERSION: ${{ steps.get_version.outputs.VERSION }}
-        FILE: SimplestLoadBalancer-${{ steps.get_version.outputs.VERSION }}-${{ matrix.rid }}.zip
-        URL: https://uploads.github.com/repos/${{ github.repository }}/releases/${{ steps.get_version.outputs.RELEASE_ID }}/assets?name=SimplestLoadBalancer-${{ steps.get_version.outputs.VERSION }}-${{ matrix.rid }}.zip
+        FILE: SimplestLoadBalancer-${{ steps.get_version.outputs.VERSION }}-${{ matrix.rid }}.msi
+        URL: https://uploads.github.com/repos/${{ github.repository }}/releases/${{ steps.get_version.outputs.RELEASE_ID }}/assets?name=SimplestLoadBalancer-${{ steps.get_version.outputs.VERSION }}-${{ matrix.rid }}.msi
       run: |
         echo $VERSION
         echo $URL
         AUTH="Authorization: token $GITHUB_TOKEN"
         echo $AUTH
         curl -sSL -XPOST -H "$AUTH" --upload-file "$FILE" --header "Content-Type:application/octet-stream" --write-out "%{http_code}" --output $(mktemp) "$URL"
-      
