Update to current syntax for outputs, generalize ref as version.

--- a/.github/workflows/release-msi.yml
+++ b/.github/workflows/release-msi.yml
@@ -24,8 +24,8 @@ jobs:
     - name: Get the Tagged Version
       id: get_version
       run: | 
-        echo ::set-output name=VERSION::${GITHUB_REF/refs\/tags\//}
-        echo ::set-output name=RELEASE_ID::$(jq --raw-output '.release.id' $GITHUB_EVENT_PATH)
+        echo "VERSION=${{ github.ref_name }}" >> $GITHUB_OUTPUT
+        echo "RELEASE_ID=$(jq --raw-output '.release.id' $GITHUB_EVENT_PATH)" >> $GITHUB_OUTPUT
     - name: Publish for OS
       run: dotnet publish -o ./slb-${{ matrix.rid }} -c Release -r ${{ matrix.rid }} /p:PublishSingleFile=true /p:PublishReadyToRun=true /p:Version=${{ steps.get_version.outputs.VERSION }} --self-contained
     - name: Add msbuild to PATH
