--- a/.github/workflows/release-msi.yml
+++ b/.github/workflows/release-msi.yml
@@ -8,13 +8,10 @@ on:
 
 jobs:
   publish:
-
-    runs-on: windows-latest
-    
+    runs-on: windows-latest    
     strategy:
-        matrix:
-            rid: [win-x64]
-
+      matrix:
+        rid: [win-x64]
     steps:
     - uses: actions/checkout@v2
     - name: Setup .NET Core
@@ -23,11 +20,11 @@ jobs:
         dotnet-version: 8.0.x
     - name: Get the Tagged Version
       id: get_version
-      run: | 
-        echo "VERSION=${{ github.ref_name }}" >> $GITHUB_OUTPUT
-        echo "RELEASE_ID=$(jq --raw-output '.release.id' $GITHUB_EVENT_PATH)" >> $GITHUB_OUTPUT
+      run:
+        echo "VERSION=${{ github.ref_name }}" >> "$GITHUB_OUTPUT"
+        echo "RELEASE_ID=$(jq --raw-output '.release.id' $GITHUB_EVENT_PATH)" >> "$GITHUB_OUTPUT"
     - name: Publish for OS
-      run: dotnet publish -o ./slb-${{ matrix.rid }} -c Release -r ${{ matrix.rid }} /p:PublishSingleFile=true /p:PublishReadyToRun=true /p:Version=${{ steps.get_version.outputs.VERSION }} --self-contained
+      run: dotnet publish SimplestLoadBalancer.csproj -o ./slb-${{ matrix.rid }} -c Release -r ${{ matrix.rid }} /p:PublishSingleFile=true /p:PublishReadyToRun=true /p:Version=${{ steps.get_version.outputs.VERSION }} --self-contained
     - name: Add msbuild to PATH
       uses: microsoft/setup-msbuild@v2
     - name: Install WiX
