--- a/snapcraft.yaml
+++ b/snapcraft.yaml
@@ -9,7 +9,7 @@ source-code: https://github.com/mlhpdx/SimplestLoadBalancer
 website: https://github.com/mlhpdx/SimplestLoadBalancer
 license: MIT
 environment:
-  DOTNET_SYSTEM_GLOBALIZATION_INVARIANT=1
+  DOTNET_SYSTEM_GLOBALIZATION_INVARIANT: 1
 
 grade: stable # or 'devel' for development versions
 confinement: strict # or 'devmode' for development
