--- a/.github/workflows/release-msi.yml
+++ b/.github/workflows/release-msi.yml
@@ -11,7 +11,7 @@ jobs:
     runs-on: windows-latest    
     strategy:
       matrix:
-        rid: [win-x64]
+        rid: [x64, arm64]
     steps:
     - uses: actions/checkout@v4
     - name: Setup .NET Core
@@ -25,7 +25,7 @@ jobs:
         echo "VERSION=${{ github.ref_name }}" >> "$GITHUB_OUTPUT"
         echo "RELEASE_ID=$(jq --raw-output '.release.id' $GITHUB_EVENT_PATH)" >> "$GITHUB_OUTPUT"
     - name: Publish for OS
-      run: dotnet publish SimplestLoadBalancer.csproj -o ./slb-${{ matrix.rid }} -c Release -r ${{ matrix.rid }} /p:PublishSingleFile=true /p:PublishReadyToRun=true /p:Version=${{ steps.get_version.outputs.VERSION }} --self-contained
+      run: dotnet publish SimplestLoadBalancer.csproj -o ./publish/win-${{ matrix.rid }} -c Release -r win-${{ matrix.rid }} /p:PublishSingleFile=true /p:PublishReadyToRun=true /p:Version=${{ steps.get_version.outputs.VERSION }} --self-contained
     - name: Add msbuild to PATH
       uses: microsoft/setup-msbuild@v2
     - name: Install WiX
@@ -34,17 +34,31 @@ jobs:
         wix extension add WixToolset.UI.wixext
         wix extension add WixToolset.Firewall.wixext
     - name: Build WiX on Windows
-      run: wix build package.wxs -define Version=${{ steps.get_version.outputs.VERSION }} -define PublishDir=./slb-${{ matrix.rid }} -o SimplestLoadBalancer-${{ steps.get_version.outputs.VERSION }}-${{ matrix.rid }}.msi -ext WixToolset.UI.wixext -ext WixToolset.Firewall.wixext
+      run: wix build package.wxs -arch ${{ matrix.rid }} -define Version=${{ steps.get_version.outputs.VERSION }} -define PublishDir=./publish/win-${{ matrix.rid }} -o SimplestLoadBalancer-${{ steps.get_version.outputs.VERSION }}-win-${{ matrix.rid }}.msi -ext WixToolset.UI.wixext -ext WixToolset.Firewall.wixext
     - name: Upload MSI to Releaase
       shell: bash
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         VERSION: ${{ steps.get_version.outputs.VERSION }}
-        FILE: SimplestLoadBalancer-${{ steps.get_version.outputs.VERSION }}-${{ matrix.rid }}.msi
-        URL: https://uploads.github.com/repos/${{ github.repository }}/releases/${{ steps.get_version.outputs.RELEASE_ID }}/assets?name=SimplestLoadBalancer-${{ steps.get_version.outputs.VERSION }}-${{ matrix.rid }}.msi
+        FILE: SimplestLoadBalancer-${{ steps.get_version.outputs.VERSION }}-win-${{ matrix.rid }}.msi
+        URL: https://uploads.github.com/repos/${{ github.repository }}/releases/${{ steps.get_version.outputs.RELEASE_ID }}/assets?name=SimplestLoadBalancer-${{ steps.get_version.outputs.VERSION }}-win-${{ matrix.rid }}.msi
       run: |
         echo $VERSION
         echo $URL
         AUTH="Authorization: token $GITHUB_TOKEN"
         echo $AUTH
         curl -sSL -XPOST -H "$AUTH" --upload-file "$FILE" --header "Content-Type:application/octet-stream" --write-out "%{http_code}" --output $(mktemp) "$URL"
+  winget:
+    needs: publish
+    runs-on: windows-latest
+    steps:
+    - name: update
+      shell: pwsh
+      env: 
+        VERSION: ${{ github.ref_name }}
+        URL_X64: https://github.com/dotenvx/dotenvx/releases/download/${{ github.ref_name }}/SimplestLoadBalancer-${{ github.ref_name }}-win-x64.msi
+        URL_ARM64: https://github.com/dotenvx/dotenvx/releases/download/${{ github.ref_name }}/SimplestLoadBalancer-${{ github.ref_name }}-win-arm64.msi
+      run: |
+        iwr https://aka.ms/wingetcreate/latest -OutFile wingetcreate.exe
+        ./wingetcreate update mlhpdx.SimplestLoadBalancer -s -v ${{ env.VERSION }} -u ${{ env.URL_X64 }} ${{ env.URL_ARM64 }} -t ${{ secrets.GITHUB_TOKEN }}
+        
