--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,10 +1,8 @@
 name: Release
-
 on: 
   release: 
     types:
       - created
-
 jobs:
   publish:
     runs-on: ubuntu-latest
@@ -38,4 +36,21 @@ jobs:
         AUTH="Authorization: token $GITHUB_TOKEN"
         echo $AUTH
         curl -sSL -XPOST -H "$AUTH" --upload-file "$FILE" --header "Content-Type:application/octet-stream" --write-out "%{http_code}" --output $(mktemp) "$URL"
+  snap:
+    needs: publish
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - uses: snapcore/action-build@v1
+        id: build
+        env: 
+          VERSION: ${{ github.ref_name }}
+          URL_X64: https://github.com/mlhpdx/SimplestLoadBalancer/releases/download/${{ github.ref_name }}/SimplestLoadBalancer-${{ github.ref_name }}-win-x64.msi
+          URL_ARM64: https://github.com/mlhpdx/SimplestLoadBalancer/releases/download/${{ github.ref_name }}/SimplestLoadBalancer-${{ github.ref_name }}-win-arm64.msi
+      - uses: snapcore/action-publish@v1
+        env:
+          SNAPCRAFT_STORE_CREDENTIALS: ${{ secrets.STORE_LOGIN }}
+        with:
+          snap: ${{ steps.build.outputs.snap }}
+          release: stable    
       
